[tool.poetry]
name = "gp-emulator"
version = "0.1.0-dev"
description = "Toolset for creating Gaussian Process (GP) emulators."
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "gp_emulator" }
]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

