[tool.poetry]
name = "gp-emulator"
version = "0.1.0-dev"
description = "Toolset for creating Gaussian Process (GP) emulators."
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "gp_emulator" }
]

[tool.poetry.dependencies]
python = "^3.9"
gpflow = "^2.9.0"


[tool.poetry.group.nb.dependencies]
jupyter = "^1.0.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

